Neubot 0.4.1-rc4 [2011-08-29]
	* MacOS: move icon-creation tutorial to the proper place
	* doc/RELEASE: mention the Mac package too
	* icons: Update neubot.ico
	* icons/Makefile: forgot to mention neubot-48x48.png
	* icons: update neubot-48x48.png
	* www: update header web
	* www: Translate title and subtitle into italian
	* Merge branches 'pu.MacOS', 'pu.icons' and 'pu.www' into next
	* doc/RELEASE: sections
	* doc/RELEASE: prepend .exe to the command
	* MacOS: preflight: Make sure /tmp/neubot-can-share exists
	* Merge branches 'pu.doc' and 'pu.MacOS' into next
	* neubot: make sure there are no executable files inside
	* MacOS: makepkg.py must be run by root.  Period.
	* MacOS: document makepkg.py algorithm
	* simplejson: Upgrade to 2.1.6
	* MacOS: makepkg.py: more precise unhandled exceptions handling
	* MacOS: makepkg.py must not write bytecode
	* MacOS: makepkg.py: really ensure root:wheel ownership
	* Merge branches 'pu.MacOS', 'pu.doc', 'pu.icons', 'pu.simplejson' and 'pu.www' into next
	* Release neubot/0.4.1-rc4

Neubot 0.4.1-rc3 [2011-08-28]
	* bittorrent: don't need to exit(0)
	* bittorrent: drop privileges after listen()
	* rendezvous/server.py: export initialization via run()
	* negotiate: export run() and propagate changes
	* neubot: Add server.py to start server-side components
	* Merge branch 'server-command' into next
	* main/module.py: re-raise SystemExit
	* speedtest: server: Remove old test server code
	* speedtest: server: We don't need StringIO anymore
	* server.py: Expose simple server-side API on port 9775
	* bin: Add Nagios plugin for Neubot
	* Merge branch 'nagios-plugin' into next
	* nagios-plugin-neubot: critical in nagios is 2 not 1
	* nagios-plugin-neubot: set default socket timeout of 3 seconds
	* nagios-plugin-neubot: arm 10-seconds watchdog timeout
	* nagios-plugin-neubot: avoid NameError in error path
	* nagios-plugin-neubot: wrap very long line
	* nagios-plugin-neubot: basic command line options parsing