@@ -5,7 +5,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>org.neubot</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.4.1-rc4</string>
+	<string>0.4.1</string>
 	<key>IFMajorVersion</key>
 	<integer>0</integer>
 	<key>IFMinorVersion</key>
