@@ -52,7 +52,7 @@ if __name__ == '__main__':
 
 from neubot.libversion import LibVersion
 
-VERSION = '0.4.1-rc4'
+VERSION = '0.4.1'
 NUMERIC_VERSION = LibVersion.to_numeric(VERSION)
 
 IGNORER = shutil.ignore_patterns('.DS_Store')
