@@ -52,7 +52,7 @@ Try `neubot help` to get a list of available subcommands.
 Try `neubot COMMAND --help` for more help on COMMAND.
 '''
 
-VERSION = "0.4.1-rc4"
+VERSION = "0.4.1"
 
 def main(argv):
 
