@@ -1,3 +1,9 @@
+Neubot 0.4.1 [2011-08-30]
+	* MacOS: uninstall.sh: remove all Neubot receipts
+	* MacOS: uninstall.sh: add comment
+	* Merge branch 'pu.MacOS' into next
+	* Release neubot/0.4.1
+
 Neubot 0.4.1-rc4 [2011-08-29]
 	* MacOS: move icon-creation tutorial to the proper place
 	* doc/RELEASE: mention the Mac package too
